--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,11 @@ dependencies {
     implementation 'com.j256.ormlite:ormlite-core:5.3'
     implementation 'com.j256.ormlite:ormlite-android:5.3'
     implementation 'com.basgeekball:awesome-validation:1.3'
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
     implementation files('libs/log4j-1.2.17.jar')
     implementation files('libs/android-logging-log4j-1.0.3.jar')
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.exifinterface:exifinterface:1.3.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
