--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,8 +40,10 @@
         <activity android:name=".MobileNumberActivity" />
         <activity
             android:name=".AddressActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name" />
+            android:configChanges="orientation|screenSize"
+            android:label="@string/app_name" >
+
+        </activity>
         <activity
             android:name=".FullscreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
