--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -39,12 +39,16 @@ dependencies {
     implementation 'com.j256.ormlite:ormlite-core:5.3'
     implementation 'com.j256.ormlite:ormlite-android:5.3'
     implementation 'com.basgeekball:awesome-validation:1.3'
+    implementation "androidx.multidex:multidex:2.0.1"
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
     // Declare the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+    // Declare the dependency for the Realtime Database library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-database'
     implementation files('libs/log4j-1.2.17.jar')
     implementation files('libs/android-logging-log4j-1.0.3.jar')
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
