--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,26 @@ plugins {
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+// Apply the Crashlytics Gradle plugin
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('E:\\FullOnDiscount\\ShikshanKranti\\shikshankranti.jks')
+            storePassword var
+            keyAlias = var1
+            keyPassword var2
+        }
+        debug {
+            storeFile file('C:\\Users\\aakash.METSL\\.android\\debug.keystore')
+            storePassword var3
+            keyAlias = var4
+            keyPassword var5
+        }
+    }
+
+
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
@@ -22,6 +40,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            versionNameSuffix '1'
+            debuggable false
+            jniDebuggable false
+            renderscriptDebuggable false
+            multiDexEnabled true
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -34,25 +58,29 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'com.j256.ormlite:ormlite-core:5.3'
-    implementation 'com.j256.ormlite:ormlite-android:5.3'
-    implementation 'com.basgeekball:awesome-validation:1.3'
+    implementation 'com.j256.ormlite:ormlite-core:5.5'
+    implementation 'com.j256.ormlite:ormlite-android:5.5'
+    implementation 'com.basgeekball:awesome-validation:4.3'
     implementation "androidx.multidex:multidex:2.0.1"
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+    implementation files('libs/log4j-1.2.17.jar')
+    implementation files('libs/android-logging-log4j-1.0.3.jar')
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.exifinterface:exifinterface:1.3.2'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
     // Declare the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth'
-    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
     // Declare the dependency for the Realtime Database library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-database'
-    implementation files('libs/log4j-1.2.17.jar')
-    implementation files('libs/android-logging-log4j-1.0.3.jar')
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.exifinterface:exifinterface:1.3.2'
+    implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-analytics'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
