--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,12 @@
+ext {
+    var = 'Morghulis@4647'
+    var1 = 'kindraj'
+    var2 = 'Morghulis@4647'
+    var3 = 'android'
+    var4 = 'androiddebugkey'
+    var5 = 'android'
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
@@ -7,6 +16,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.1'
         classpath 'com.google.gms:google-services:4.3.8'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.6.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
