--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,16 @@
         android:name="android.hardware.camera.raw"
         android:required="false" />
 
+    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
     <uses-permission
         android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"
         tools:ignore="ProtectedPermissions" />
     <uses-permission
         android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"
         tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
     <uses-permission
         android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
@@ -31,6 +34,7 @@
     <application
         android:name=".application.MyApplication"
         android:allowBackup="true"
+        android:grantUriPermissions="true"
         android:icon="@mipmap/ic_logo"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
@@ -38,11 +42,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ShikshanKrantiSanghatna"
         tools:ignore="AllowBackup">
-        <activity android:name=".VerificationActivity" android:screenOrientation="portrait" />
 
         <meta-data
             android:name="com.google.android.actions"
             android:resource="@xml/provider_paths" />
+
+        <activity
+            android:name=".VerificationActivity"
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".MobileNumberActivity"
@@ -74,9 +81,15 @@
             android:name=".RegisterForm"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".CaptureActivity" android:screenOrientation="portrait" />
-        <activity android:name=".ReportActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".TermsActivity" android:screenOrientation="portrait"/>
+        <activity
+            android:name=".CaptureActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ReportActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".TermsActivity"
+            android:screenOrientation="portrait" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
