--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,9 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 // Apply the Crashlytics Gradle plugin
 apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: 'kotlin-android'
+
+apply plugin: 'kotlin-android-extensions'
 
 android {
     signingConfigs {
@@ -60,8 +63,6 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'com.j256.ormlite:ormlite-core:5.5'
-    implementation 'com.j256.ormlite:ormlite-android:5.5'
     implementation 'com.basgeekball:awesome-validation:4.3'
     implementation "androidx.multidex:multidex:2.0.1"
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
@@ -81,7 +82,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //    Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinerVer"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinerVer"
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation "com.github.bumptech.glide:glide:4.10.0"
 }
