--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,8 +81,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta01'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.rey5137:material:1.3.1'
+    implementation 'androidx.work:work-runtime:2.6.0-beta01'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
