--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,8 @@ android {
         applicationId "com.shikshankranti.sanghatna"
         minSdkVersion 19
         targetSdkVersion 30
-        versionCode 6
-        versionName "1.5"
+        versionCode 8
+        versionName "1.7"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -41,8 +41,8 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            versionNameSuffix '2'
-            debuggable true
+            versionNameSuffix '1'
+            debuggable false
             jniDebuggable false
             renderscriptDebuggable false
             multiDexEnabled true
