--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,8 @@ android {
         applicationId "com.shikshankranti.sanghatna"
         minSdkVersion 19
         targetSdkVersion 30
-        versionCode 8
-        versionName "1.7"
+        versionCode 9
+        versionName "1.8"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -60,7 +60,7 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.basgeekball:awesome-validation:4.3'
     implementation "androidx.multidex:multidex:2.0.1"
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
@@ -79,20 +79,19 @@ dependencies {
     // Declare the dependency for the Realtime Database library
     // When using the BoM, you don't srpecify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-database'
-    implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta01'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.rey5137:material:1.3.1'
-    implementation 'androidx.work:work-runtime:2.6.0-beta01'
+    implementation 'androidx.work:work-runtime:2.7.0-alpha04'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //    Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinerVer"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinerVer"
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation "com.github.bumptech.glide:glide:4.10.0"
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
