--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         android:label="@string/app_name"
         android:preserveLegacyExternalStorage="true"
         android:requestLegacyExternalStorage="true"
+        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.ShikshanKrantiSanghatna"
@@ -63,6 +64,7 @@
         <activity
             android:name=".VerificationActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".EducationForm"/>
         <activity
             android:name=".MobileNumberActivity"
             android:screenOrientation="portrait"
@@ -91,7 +93,9 @@
         <activity
             android:name=".RegisterForm"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="adjustPan"
+            android:configChanges="orientation|screenSize"
+            >
 
         </activity>
         <activity
